--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,900;1,900&display=swap');
 body {
     margin: 0;
     padding: 0;
@@ -6,9 +8,10 @@ body {
 header {
     width: 100%;
     height: 100vh;
-    background: url(header_bg.webp);
+    background: url(https://img1.akspic.ru/crops/1/7/1/6/6/166171/166171-macos_12_monterey_blue_modd_official_stock_wallpaper_6k_resolution_light-3840x2160.jpg);
     background-size: cover;
     display: flex;
+    background-blend-mode: screen;
 }
 
 .header_left {
@@ -113,5 +116,20 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+    color: white;
+}
+.black{
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
+}
+.regular{
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+.white{
     color: white;
 }
